# github-backup

./: .gitignore  README.md  docker-compose.yml  test.json
backend/: Dockerfile  main.py  pyproject.toml  scheduler.py
backend/db/: jobs.sqlite
backend/jobs/: github_backup.py
backend/models/: Schedule.py
backend/routers/: jobs.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/server/: _error.js
frontend/.next/server/pages/: _app.js  _document.js  _error.js  index.js
frontend/.next/static/chunks/: _error.js  webpack.js
frontend/.next/static/webpack/: 2832d5c5923811d9.webpack.hot-update.json  3ba41fc2705374e1.webpack.hot-update.json  6330d6809aac1e75.webpack.hot-update.json  8cb4336339c65b04.webpack.hot-update.json  webpack.0eee638f29268796.hot-update.js  webpack.0f4527729855c08e.hot-update.js  webpack.12d47e398c4ab36d.hot-update.js  webpack.2832d5c5923811d9.hot-update.js  webpack.2863ae2b9ca1e225.hot-update.js  webpack.2a66f9791af51744.hot-update.js  webpack.2b9805cd28a0e83e.hot-update.js  webpack.2f099e87df40847f.hot-update.js  webpack.342f470e0165e986.hot-update.js  webpack.3622e315c8a2e994.hot-update.js  webpack.3642d63211ccaab9.hot-update.js  webpack.3a2225ed10c0d16c.hot-update.js  webpack.3ba41fc2705374e1.hot-update.js  webpack.3ddaf7680c1bde38.hot-update.js  webpack.3fbb78ea82b0aad8.hot-update.js  webpack.3ffa84224efa11f9.hot-update.js  (+42 more)
frontend/components/: AddJobModal.jsx  JobCard.jsx  NavBar.jsx  UploadJobModal.jsx
frontend/lib/: createJob.js
frontend/pages/: _document.js  index.js
(+79 files in other folders)
