[tool.poetry]
name = "backup-backend"
version = "0.0.1"
description = "Backend API for the automatic GitHub Backup System"
authors = ["Chetas Murali <me@chetasr.co>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
APScheduler = "^3.10.1"
SQLAlchemy = "^2.0.4"
ghapi = "^1.0.3"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
